// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> should render Counter with default props 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.neutral.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(216, 27%, 36%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast blue variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="badge.background.blue.highContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(218, 89%, 51%, 1)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="badge.text.blue.highContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast information variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.information.highContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(193, 100%, 35%, 1)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.information.highContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast negative variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.negative.highContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(8, 73%, 47%, 1)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.negative.highContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast neutral variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.neutral.highContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(216, 33%, 29%, 1)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.neutral.highContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast notice variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.notice.highContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(38, 97%, 38%, 1)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.notice.highContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast positive variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.positive.highContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(160, 100%, 26%, 1)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.positive.highContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render large size Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.neutral.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="large"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={100}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(216, 27%, 36%, 1)",
              "fontFamily": "Lato",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast blue variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="badge.background.blue.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(218, 89%, 51%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="badge.text.blue.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(218, 89%, 51%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast information variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.information.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(193, 100%, 35%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.information.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(193, 100%, 35%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast negative variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.negative.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(9, 91%, 56%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.negative.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(8, 73%, 47%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast neutral variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.neutral.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(216, 27%, 36%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast notice variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.notice.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(36, 100%, 44%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.notice.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(38, 97%, 38%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast positive variant Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.positive.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(155, 100%, 31%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.positive.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(160, 100%, 26%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render medium size Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.neutral.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="medium"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
        ]
      }
    >
      <Text
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(216, 27%, 36%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render small size Counter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="feedback.background.neutral.lowContrast"
    data-blade-component="base-box"
    platform="onMobile"
    size="small"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderRadius": 9999,
          "display": "flex",
          "flexWrap": "nowrap",
          "maxWidth": 100,
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="counter"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      overflow="hidden"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
        ]
      }
    >
      <Text
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        fontFamily="text"
        fontSize={25}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={50}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "hsla(216, 27%, 36%, 1)",
              "fontFamily": "Lato",
              "fontSize": 10,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        20
      </Text>
    </View>
  </View>
</View>
`;
